--- a/output/cv.html
+++ b/output/cv.html
@@ -49,13 +49,13 @@
  
 
 <meta name="author" content="David Martin" />
-<meta name="description" content="CV EDUCATION Ph.D - Bio-Statistics (2025) IRMAR / Movement Sport and Health (M2S lab) - Univ. de Rennes MSc - Cellular and molecular biology (2019) Univ. de Bretagne Occidentale / Univ. Claude Bernard 2017 BSc - Sports Science (2017) Univ. de Rennes 2 2014 EXPERIENCES PhD (Bio-Statistics) - (2022-2025) Institute of Research Mathematics, Rennes, France Statistical …" />
+<meta name="description" content="Curriculum vitae EDUCATION Ph.D - Bio-Statistics (2025) IRMAR / Movement Sport and Health (M2S lab) - Univ. de Rennes MSc - Cellular and molecular biology (2019) Univ. de Bretagne Occidentale / Univ. Claude Bernard BSc - Sports Science (2017) Univ. de Rennes 2 EXPERIENCES PhD (Bio-Statistics) - (2022-2025) Institute of Research Mathematics, Rennes, France Statistical analysis …" />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="David Martin - PhD"/>
-  <meta property="og:title" content="CV"/>
-  <meta property="og:description" content="CV EDUCATION Ph.D - Bio-Statistics (2025) IRMAR / Movement Sport and Health (M2S lab) - Univ. de Rennes MSc - Cellular and molecular biology (2019) Univ. de Bretagne Occidentale / Univ. Claude Bernard 2017 BSc - Sports Science (2017) Univ. de Rennes 2 2014 EXPERIENCES PhD (Bio-Statistics) - (2022-2025) Institute of Research Mathematics, Rennes, France Statistical …"/>
+  <meta property="og:title" content="cv"/>
+  <meta property="og:description" content="Curriculum vitae EDUCATION Ph.D - Bio-Statistics (2025) IRMAR / Movement Sport and Health (M2S lab) - Univ. de Rennes MSc - Cellular and molecular biology (2019) Univ. de Bretagne Occidentale / Univ. Claude Bernard BSc - Sports Science (2017) Univ. de Rennes 2 EXPERIENCES PhD (Bio-Statistics) - (2022-2025) Institute of Research Mathematics, Rennes, France Statistical analysis …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="./cv.html"/>
   <meta property="og:type" content="article"/>
@@ -63,9 +63,9 @@
   <meta property="article:modified_time" content="2025-08-07 08:00:00+02:00"/>
   <meta property="article:author" content="./author/david-martin.html">
   <meta property="article:section" content="CV"/>
-  <meta property="og:image" content="images/profile.png">
+  <meta property="og:image" content="https://djrmartin.github.ioimages/profile.png">
 
-  <title>David Martin - PhD &ndash; CV</title>
+  <title>David Martin - PhD &ndash; cv</title>
 
 
 </head>
@@ -74,7 +74,7 @@
 <aside>
   <div>
     <a href="./">
-      <img src="images/profile.png" alt="David Martin - PhD" title="David Martin - PhD">
+      <img src="https://djrmartin.github.ioimages/profile.png" alt="David Martin - PhD" title="David Martin - PhD">
     </a>
 
     <h1>
@@ -145,7 +145,7 @@
 <article class="single">
   <header>
       
-    <h1 id="cv">CV</h1>
+    <h1 id="cv">cv</h1>
     <p>
       Posted on August 07, 2025 in <a href="./category/cv.html">CV</a>
 
@@ -154,14 +154,14 @@
 
 
   <div>
-    <h1>CV</h1>
+    <h1>Curriculum vitae</h1>
 <h2>EDUCATION</h2>
 <h3>Ph.D - Bio-Statistics (2025)</h3>
 <p>IRMAR / Movement Sport and Health (M2S lab) - Univ. de Rennes</p>
 <h3>MSc - Cellular and molecular biology (2019)</h3>
-<p>Univ. de Bretagne Occidentale / Univ. Claude Bernard 2017</p>
+<p>Univ. de Bretagne Occidentale / Univ. Claude Bernard</p>
 <h3>BSc - Sports Science (2017)</h3>
-<p>Univ. de Rennes 2 2014</p>
+<p>Univ. de Rennes 2</p>
 <h2>EXPERIENCES</h2>
 <h3>PhD (Bio-Statistics) - (2022-2025)</h3>
 <p><em>Institute of Research Mathematics, Rennes, France</em></p>
@@ -279,7 +279,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@type" : "Blog",
   "name": " David Martin - PhD ",
   "url" : ".",
-  "image": "images/profile.png",
+  "image": "https://djrmartin.github.ioimages/profile.png",
   "description": ""
 }
 </script><script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55adbb025d4f7e55" async="async"></script>
