--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -56,7 +56,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
-  <meta property="og:image" content="images/profile.png">
+  <meta property="og:image" content="https://djrmartin.github.ioimages/profile.png">
 
 
 
@@ -69,7 +69,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="images/profile.png" alt="David Martin - PhD" title="David Martin - PhD">
+      <img src="https://djrmartin.github.ioimages/profile.png" alt="David Martin - PhD" title="David Martin - PhD">
     </a>
 
     <h1>
@@ -192,7 +192,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@type" : "Blog",
   "name": " David Martin - PhD ",
   "url" : "..",
-  "image": "images/profile.png",
+  "image": "https://djrmartin.github.ioimages/profile.png",
   "description": ""
 }
 </script><script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55adbb025d4f7e55" async="async"></script>
