--- a/output/publications.html
+++ b/output/publications.html
@@ -63,7 +63,7 @@
   <meta property="article:modified_time" content="2025-08-07 15:00:00+02:00"/>
   <meta property="article:author" content="./author/david-martin.html">
   <meta property="article:section" content="PUBLICATIONS"/>
-  <meta property="og:image" content="images/profile.png">
+  <meta property="og:image" content="https://djrmartin.github.ioimages/profile.png">
 
   <title>David Martin - PhD &ndash; Publications</title>
 
@@ -74,7 +74,7 @@
 <aside>
   <div>
     <a href="./">
-      <img src="images/profile.png" alt="David Martin - PhD" title="David Martin - PhD">
+      <img src="https://djrmartin.github.ioimages/profile.png" alt="David Martin - PhD" title="David Martin - PhD">
     </a>
 
     <h1>
@@ -240,7 +240,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@type" : "Blog",
   "name": " David Martin - PhD ",
   "url" : ".",
-  "image": "images/profile.png",
+  "image": "https://djrmartin.github.ioimages/profile.png",
   "description": ""
 }
 </script><script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55adbb025d4f7e55" async="async"></script>
